fix for scrollbars on zoomed-out view

--- a/calcutor/calcutor/static/style.css
+++ b/calcutor/calcutor/static/style.css
@@ -162,8 +162,8 @@
     width: 100%;
     height: 12em;
     overflow: scroll;
-    padding: 0 15px 20px 0;
-    margin: 0 -15px -20px 0;
+    padding: 0 25px 25px 0;
+    margin: 0 -25px -25px 0;
     direction: ltr;
 }
 
